Image UplLoad at business done

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
       rel="stylesheet"
     /> -->
 
+    <link href="path/to/lightbox.css" rel="stylesheet" />
     <title>Compass</title>
   </head>
   <body>
